feat: implemntacion del meni desplegable para peridos activos segun consulta udistrital/sga_documentacion#408

--- a/src/app/components/asignacion-fechas/asignacion-fechas.component.html
+++ b/src/app/components/asignacion-fechas/asignacion-fechas.component.html
@@ -14,9 +14,12 @@
       <label for="periodoFormacion">{{ "asignacion_fechas.seleccionar_periodo" | translate }}</label>
       <select id="periodoFormacion" [(ngModel)]="periodoFormacion">
         <option value="" disabled selected>Selecciona el período de formación</option>
-        <option *ngFor="let periodo of periodos" [value]="periodo.Id">{{ periodo.Nombre }}</option>
+        <option *ngFor="let periodo of periodos" [value]="periodo.Id">
+          <span [ngClass]="{'punto-verde': periodo.Activo, 'punto-rojo': !periodo.Activo}"></span>
+          {{ periodo.Nombre }} - {{ periodo.Descripcion }}
+        </option>
       </select>
-    </div>
+    </div>    
   </div>
 
   <div class="procesos-grid">
