--- a/src/app/components/asignacion-fechas/asignacion-fechas.component.scss
+++ b/src/app/components/asignacion-fechas/asignacion-fechas.component.scss
@@ -222,4 +222,14 @@
     text-align: center;
     margin-top: 20px;
   }
+
+  .punto-verde {
+    width: 10px;
+    height: 10px;
+    background-color: green;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 8px;
+  }
+
 }
