feat: implementacion de stepper y expacion panel udistrital/sga_documentacion#420

--- a/src/app/components/dynamic-form/dynamic-form.component.html
+++ b/src/app/components/dynamic-form/dynamic-form.component.html
@@ -1,7 +1,7 @@
 <div [ngSwitch]="normalform.tipo_formulario">
 
     <!-- Formulario Mini -->
-    <form *ngSwitchCase="'mini'" class="form-horizontal">
+    <form [formGroup]="form" *ngSwitchCase="'mini'" class="form-horizontal">
         <mat-card>
             <mat-card-header>
                 <mat-card-title>{{ normalform.titulo }}</mat-card-title>
@@ -15,17 +15,16 @@
                         <mat-form-field *ngSwitchCase="'input'" appearance="outline" style="width: 100%"
                             floatLabel="always">
                             <mat-label>{{ c.requerido ? "* " + c.label : c.label }}</mat-label>
-                            <input matInput [(ngModel)]="c.valor" (ngModelChange)="validCampo(c)"
-                                [ngModelOptions]="{ standalone: true }" [type]="c.tipo" [id]="c.nombre" [min]="c.min"
-                                [max]="c.max" [placeholder]="c.placeholder" [disabled]="c.deshabilitar"
-                                [pattern]="c.pattern" />
+                            <input matInput [formControlName]="c.nombre" (ngModelChange)="validCampo(c)" [type]="c.tipo"
+                                [id]="c.nombre" [min]="c.min" [max]="c.max" [placeholder]="c.placeholder"
+                                [disabled]="c.deshabilitar" [pattern]="c.pattern" />
                             <mat-hint class="text-danger">{{ c.alerta }}</mat-hint>
                         </mat-form-field>
 
                         <!-- Checkbox -->
                         <div *ngSwitchCase="'checkbox'" class="mt-4">
-                            <mat-checkbox [(ngModel)]="c.valor" (change)="onCheckboxChange(c)"
-                                [ngModelOptions]="{ standalone: true }" [disabled]="c.deshabilitar">
+                            <mat-checkbox [formControlName]="c.nombre" (change)="onCheckboxChange(c)"
+                                [disabled]="c.deshabilitar">
                                 {{ c.requerido ? "* " + c.label : c.label }}
                             </mat-checkbox>
                             <mat-hint class="text-danger">{{ c.alerta }}</mat-hint>
@@ -35,10 +34,9 @@
                         <mat-form-field *ngSwitchCase="'textarea'" appearance="outline" style="width: 100%"
                             floatLabel="always">
                             <mat-label>{{ c.requerido ? "* " + c.label : c.label }}</mat-label>
-                            <textarea matInput [(ngModel)]="c.valor" (ngModelChange)="validCampo(c)"
-                                [ngModelOptions]="{ standalone: true }" [id]="c.nombre" [placeholder]="c.placeholder"
-                                [disabled]="c.deshabilitar" cdkTextareaAutosize cdkAutosizeMinRows="3"
-                                cdkAutosizeMaxRows="6"></textarea>
+                            <textarea matInput [formControlName]="c.nombre" (ngModelChange)="validCampo(c)"
+                                [id]="c.nombre" [placeholder]="c.placeholder" [disabled]="c.deshabilitar"
+                                cdkTextareaAutosize cdkAutosizeMinRows="3" cdkAutosizeMaxRows="6"></textarea>
                             <mat-hint class="text-danger">{{ c.alerta }}</mat-hint>
                         </mat-form-field>
 
@@ -46,9 +44,8 @@
                         <mat-form-field *ngSwitchCase="'mat-date'" appearance="outline" style="width: 100%"
                             floatLabel="always">
                             <mat-label>{{ c.requerido ? "* " + c.label : c.label }}</mat-label>
-                            <input matInput [matDatepicker]="picker" [(ngModel)]="c.valor"
-                                (dateChange)="onChangeDate($event, c); validCampo(c)"
-                                [ngModelOptions]="{ standalone: true }" [placeholder]="c.placeholder"
+                            <input matInput [matDatepicker]="picker" [formControlName]="c.nombre"
+                                (dateChange)="onChangeDate($event, c); validCampo(c)" [placeholder]="c.placeholder"
                                 [disabled]="c.deshabilitar" />
                             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                             <mat-datepicker #picker></mat-datepicker>
@@ -59,8 +56,8 @@
                         <mat-form-field *ngSwitchCase="'select'" appearance="outline" style="width: 100%"
                             floatLabel="always">
                             <mat-label>{{ c.requerido ? "* " + c.label : c.label }}</mat-label>
-                            <mat-select [(ngModel)]="c.valor" (selectionChange)="validCampo(c)"
-                                [ngModelOptions]="{ standalone: true }" [disabled]="c.deshabilitar">
+                            <mat-select [formControlName]="c.nombre" (selectionChange)="validCampo(c)"
+                                [disabled]="c.deshabilitar">
                                 <mat-option value="">{{ '--Seleccionar--' }}</mat-option>
                                 <mat-option *ngFor="let item of c.opciones" [value]="item">
                                     {{ c.key ? item[c.key] : (item | json) }}
@@ -107,16 +104,19 @@
     </form>
 
     <!-- Formulario por Pasos (bySteps) -->
-    <form *ngSwitchCase="'bySteps'" class="form-horizontal">
+    <form [formGroup]="form" *ngSwitchCase="'bySteps'" class="form-horizontal">
         <mat-card>
             <mat-card-header>
                 <mat-card-title>{{ normalform.titulo }}</mat-card-title>
             </mat-card-header>
             <mat-card-content>
-                <mat-vertical-stepper #stepper>
+                <mat-vertical-stepper [linear]="true" formGroupName="stepperForm">
                     <mat-step
                         *ngFor="let step of getUniqueSteps(normalform.campos); let isFirst = first; let isLast = last"
-                        [label]="('GLOBAL.paso' | translate) + ' ' + step">
+                        [stepControl]="form.get(getStepControlName(step)) || emptyControl">
+                        <ng-template matStepLabel>
+                            {{ ('GLOBAL.paso' | translate) + ' ' + step }}
+                        </ng-template>
 
                         <div class="form-grid">
                             <div *ngFor="let c of getFieldsInStep(step)" class="{{ c.claseGrid }}"
@@ -126,17 +126,17 @@
                                 <mat-form-field *ngSwitchCase="'input'" appearance="outline" style="width: 100%"
                                     floatLabel="always">
                                     <mat-label>{{ c.requerido ? "* " + c.label : c.label }}</mat-label>
-                                    <input matInput [(ngModel)]="c.valor" (ngModelChange)="validCampo(c)"
-                                        [ngModelOptions]="{ standalone: true }" [type]="c.tipo" [id]="c.nombre"
-                                        [min]="c.min" [max]="c.max" [placeholder]="c.placeholder"
-                                        [disabled]="c.deshabilitar" [pattern]="c.pattern" />
+                                    <input matInput [formControlName]="c.nombre" (ngModelChange)="validCampo(c)"
+                                        [type]="c.tipo" [id]="c.nombre" [min]="c.min" [max]="c.max"
+                                        [placeholder]="c.placeholder" [disabled]="c.deshabilitar"
+                                        [pattern]="c.pattern" />
                                     <mat-hint class="text-danger">{{ c.alerta }}</mat-hint>
                                 </mat-form-field>
 
                                 <!-- Checkbox -->
                                 <div *ngSwitchCase="'checkbox'" class="mt-4">
-                                    <mat-checkbox [(ngModel)]="c.valor" (change)="onCheckboxChange(c)"
-                                        [ngModelOptions]="{ standalone: true }" [disabled]="c.deshabilitar">
+                                    <mat-checkbox [formControlName]="c.nombre" (change)="onCheckboxChange(c)"
+                                        [disabled]="c.deshabilitar">
                                         {{ c.requerido ? "* " + c.label : c.label }}
                                     </mat-checkbox>
                                     <mat-hint class="text-danger">{{ c.alerta }}</mat-hint>
@@ -146,10 +146,9 @@
                                 <mat-form-field *ngSwitchCase="'mat-date'" appearance="outline" style="width: 100%"
                                     floatLabel="always">
                                     <mat-label>{{ c.requerido ? "* " + c.label : c.label }}</mat-label>
-                                    <input matInput [matDatepicker]="picker" [(ngModel)]="c.valor"
+                                    <input matInput [matDatepicker]="picker" [formControlName]="c.nombre"
                                         (dateChange)="onChangeDate($event, c); validCampo(c)"
-                                        [ngModelOptions]="{ standalone: true }" [placeholder]="c.placeholder"
-                                        [disabled]="c.deshabilitar" />
+                                        [placeholder]="c.placeholder" [disabled]="c.deshabilitar" />
                                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                                     <mat-datepicker #picker></mat-datepicker>
                                     <mat-hint class="text-danger">{{ c.alerta }}</mat-hint>
@@ -159,8 +158,8 @@
                                 <mat-form-field *ngSwitchCase="'select'" appearance="outline" style="width: 100%"
                                     floatLabel="always">
                                     <mat-label>{{ c.requerido ? "* " + c.label : c.label }}</mat-label>
-                                    <mat-select [(ngModel)]="c.valor" (selectionChange)="validCampo(c)"
-                                        [ngModelOptions]="{ standalone: true }" [disabled]="c.deshabilitar">
+                                    <mat-select [formControlName]="c.nombre" (selectionChange)="validCampo(c)"
+                                        [disabled]="c.deshabilitar">
                                         <mat-option value="">{{ '--Seleccionar--' }}</mat-option>
                                         <mat-option *ngFor="let item of c.opciones" [value]="item">
                                             {{ c.key ? item[c.key] : (item | json) }}
@@ -218,6 +217,94 @@
                         </div>
                     </mat-step>
                 </mat-vertical-stepper>
+
+                <ng-content></ng-content>
+
+                <div class="mt-4" *ngIf="normalform.btnLimpiar || normalform.btn">
+                    <button mat-flat-button color="warn" (click)="clearForm()" *ngIf="normalform.btnLimpiar">
+                        {{ normalform.btnLimpiar }}
+                    </button>
+                    <button mat-flat-button color="accent" (click)="validForm()" *ngIf="normalform.btn">
+                        {{ normalform.btn }}
+                    </button>
+                </div>
+            </mat-card-content>
+        </mat-card>
+    </form>
+
+    <!-- Formulario Expansible -->
+    <form [formGroup]="form" *ngSwitchCase="'expansion'" class="form-horizontal">
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>{{ normalform.titulo }}</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <mat-accordion>
+                    <mat-expansion-panel *ngFor="let c of normalform.campos">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                {{ c.label }}
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+
+                        <!-- Input -->
+                        <mat-form-field *ngIf="c.etiqueta === 'input'" appearance="outline" style="width: 100%"
+                            floatLabel="always">
+                            <mat-label>{{ c.requerido ? "* " + c.label : c.label }}</mat-label>
+                            <input matInput [formControlName]="c.nombre" (ngModelChange)="validCampo(c)" [type]="c.tipo"
+                                [id]="c.nombre" [min]="c.min" [max]="c.max" [placeholder]="c.placeholder"
+                                [disabled]="c.deshabilitar" [pattern]="c.pattern" />
+                            <mat-hint class="text-danger">{{ c.alerta }}</mat-hint>
+                        </mat-form-field>
+
+                        <!-- Checkbox -->
+                        <div *ngIf="c.etiqueta === 'checkbox'" class="mt-4">
+                            <mat-checkbox [formControlName]="c.nombre" (change)="onCheckboxChange(c)"
+                                [disabled]="c.deshabilitar">
+                                {{ c.requerido ? "* " + c.label : c.label }}
+                            </mat-checkbox>
+                            <mat-hint class="text-danger">{{ c.alerta }}</mat-hint>
+                        </div>
+
+                        <!-- Textarea -->
+                        <mat-form-field *ngIf="c.etiqueta === 'textarea'" appearance="outline" style="width: 100%"
+                            floatLabel="always">
+                            <mat-label>{{ c.requerido ? "* " + c.label : c.label }}</mat-label>
+                            <textarea matInput [formControlName]="c.nombre" (ngModelChange)="validCampo(c)"
+                                [id]="c.nombre" [placeholder]="c.placeholder" [disabled]="c.deshabilitar"
+                                cdkTextareaAutosize cdkAutosizeMinRows="3" cdkAutosizeMaxRows="6"></textarea>
+                            <mat-hint class="text-danger">{{ c.alerta }}</mat-hint>
+                        </mat-form-field>
+
+                        <!-- Select -->
+                        <mat-form-field *ngIf="c.etiqueta === 'select'" appearance="outline" style="width: 100%"
+                            floatLabel="always">
+                            <mat-label>{{ c.requerido ? "* " + c.label : c.label }}</mat-label>
+                            <mat-select [formControlName]="c.nombre" (selectionChange)="validCampo(c)"
+                                [disabled]="c.deshabilitar">
+                                <mat-option value="">{{ '--Seleccionar--' }}</mat-option>
+                                <mat-option *ngFor="let item of c.opciones" [value]="item">
+                                    {{ c.key ? item[c.key] : (item | json) }}
+                                </mat-option>
+                            </mat-select>
+                            <mat-hint class="text-danger">{{ c.alerta }}</mat-hint>
+                        </mat-form-field>
+
+                        <!-- File Input -->
+                        <div *ngIf="c.etiqueta === 'file'" class="input-file">
+                            <label>{{ c.requerido ? "* " + c.label : c.label }}</label>
+                            <input type="file" (change)="onChange($event, c)" [disabled]="c.deshabilitar" />
+                            <mat-hint class="text-danger">{{ c.alerta }}</mat-hint>
+                            <div *ngIf="c.urlTemp" class="mt-2">
+                                <button mat-button color="primary" (click)="download(c.urlTemp, c.nombre, 500, 500)">
+                                    <mat-icon>cloud_download</mat-icon>
+                                    {{ "GLOBAL.click_aqui" | translate }}
+                                </button>
+                            </div>
+                        </div>
+
+                    </mat-expansion-panel>
+                </mat-accordion>
 
                 <ng-content></ng-content>
 
